2018-02-17  Bruno Haible  <bruno@clisp.org>

	Fix build failure on some Linux/arm machines.
	Reported by Dr. Werner Fink <werner@suse.de>.
	* lispbibl.d (MAPPABLE_ADDRESS_RANGE_*) [UNIX_LINUX && ARM]: Change.
	(SINGLEMAP_WORKS) [UNIX_LINUX && ARM]: Set to 0.
	* Makefile.devel (multibuild-linux-arm): Remove
	build-porting32-gcc-spvw_pure_blocks.

2018-02-17  Bruno Haible  <bruno@clisp.org>

	Use newest libffcall.
	* m4/ffcall.m4 (CL_LIBFFCALL_DOWNLOAD_URL): Point to the libffcall-2.1
	release.
	* NEWS: Likewise.
	* aclocal.m4, src/configure: Regenerated.

2018-02-17  Bruno Haible  <bruno@clisp.org>

	Fix build failure when building in the srcdir.
	Reported by Nelson Beebe.
	* makemake.in: When preprocessing the ari_asm_*.c and sp_asm_*.c files
	in the srcdir, omit the '-I' option.

2018-02-17  Bruno Haible  <bruno@clisp.org>

	Fix compilation error in C++ mode (regression from 2018-02-11).
	* spvw.d (output_mfih): Fix array initializer.

2018-02-11  Bruno Haible  <bruno@clisp.org>

	Bump version number.
	* version.sh: Bump version number to 2.49.91+.
	* version.h, src/configure: Regenerated.

2018-02-11  Bruno Haible  <bruno@clisp.org>

	Implement options -memfile-hash, -memfile-hash-of, -memfile-compatible.
	* Makefile.devel (GNULIB_CORE): Add sha1.
	* gllib/*: Update from gnulib.
	* glm4/*: Likewise.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.
	* spvw_memfile.d (MFIH_LEN): New macro.
	(memflags): Use bit 22.
	(memdump_header_t): Add '_mfihash' field.
	(get_mem_file_interface_hash): New function.
	(fill_memdump_header): Invoke it.
	(memfile_operation): New enum type.
	(memfile_handle_do_operation): Renamed from loadmem_from_handle, Add op
	and arg arguments. Handle op_extract_mfih and op_test_compatibility as
	well.
	(memfile_do_operation): New function, extracted from loadmem.
	(loadmem): Invoke it.
	(extract_mem_file_interface_hash, is_mem_file_compatible):
	New functions.
	(loadmem_from_executable): Update.